// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@topplethenun/nx-plugin-postcss:configuration dependencies for package.json adds postcss if not already present 1`] = `
Object {
  "dependencies": Object {
    "existing": "1.0.0",
    "tslib": "^2.0.0",
  },
  "devDependencies": Object {
    "@nrwl/eslint-plugin-nx": "13.4.1",
    "@nrwl/jest": "13.4.1",
    "@nrwl/linter": "13.4.1",
    "@types/jest": "27.0.2",
    "@typescript-eslint/eslint-plugin": "~5.3.0",
    "@typescript-eslint/parser": "~5.3.0",
    "eslint": "8.2.0",
    "eslint-config-prettier": "8.1.0",
    "existing": "1.0.0",
    "jest": "27.2.3",
    "postcss": "^8.0.0",
    "postcss-load-config": "^3.0.0",
    "postcss-preset-env": "^7.0.0",
    "ts-jest": "27.0.5",
  },
  "name": "test-name",
}
`;

exports[`@topplethenun/nx-plugin-postcss:configuration dependencies for package.json does not add postcss if already present 1`] = `
Object {
  "dependencies": Object {
    "existing": "1.0.0",
    "tslib": "^2.0.0",
  },
  "devDependencies": Object {
    "@nrwl/eslint-plugin-nx": "13.4.1",
    "@nrwl/jest": "13.4.1",
    "@nrwl/linter": "13.4.1",
    "@types/jest": "27.0.2",
    "@typescript-eslint/eslint-plugin": "~5.3.0",
    "@typescript-eslint/parser": "~5.3.0",
    "eslint": "8.2.0",
    "eslint-config-prettier": "8.1.0",
    "existing": "1.0.0",
    "jest": "27.2.3",
    "postcss": "7",
    "postcss-load-config": "^3.0.0",
    "postcss-preset-env": "^7.0.0",
    "ts-jest": "27.0.5",
  },
  "name": "test-name",
}
`;

exports[`@topplethenun/nx-plugin-postcss:configuration dependencies for package.json does not add postcss-preset-env if already present 1`] = `
Object {
  "dependencies": Object {
    "existing": "1.0.0",
    "tslib": "^2.0.0",
  },
  "devDependencies": Object {
    "@nrwl/eslint-plugin-nx": "13.4.1",
    "@nrwl/jest": "13.4.1",
    "@nrwl/linter": "13.4.1",
    "@types/jest": "27.0.2",
    "@typescript-eslint/eslint-plugin": "~5.3.0",
    "@typescript-eslint/parser": "~5.3.0",
    "eslint": "8.2.0",
    "eslint-config-prettier": "8.1.0",
    "existing": "1.0.0",
    "jest": "27.2.3",
    "postcss": "^8.0.0",
    "postcss-load-config": "^3.0.0",
    "postcss-preset-env": "7",
    "ts-jest": "27.0.5",
  },
  "name": "test-name",
}
`;
